generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-05/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isFlexibleArrayField(const clang::FieldDecl*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:110:11: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  110 |   if (FD->isFlexibleArrayMember())
      |           ^~~~~~~~~~~~~~~~~~~~~
      |           isFlexibleArrayMemberLike
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::FieldDecl* {anonymous}::SAGenTestChecker::getCountedByCounterFD(const clang::FieldDecl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:173:13: warning: unused variable ‘A’ [-Wunused-variable]
  173 |   if (auto *A = FlexArrayFD->getAttr<CountedByAttr>()) {
      |             ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::getFieldRegionForCounter(const clang::ento::MemRegion*, const clang::FieldDecl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:251:90: error: invalid conversion from ‘const clang::ento::MemRegion*’ to ‘const clang::ento::SubRegion*’ [-fpermissive]
  251 |   const MemRegion *FR = C.getStoreManager().getRegionManager().getFieldRegion(CounterFD, BaseObj);
      |                                                                                          ^~~~~~~
      |                                                                                          |
      |                                                                                          const clang::ento::MemRegion*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/BasicValueFactory.h:24,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SValBuilder.h:24,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/MemRegion.h:1519:54: note:   initializing argument 2 of ‘const clang::ento::FieldRegion* clang::ento::MemRegionManager::getFieldRegion(const clang::FieldDecl*, const clang::ento::SubRegion*)’
 1519 |                                     const SubRegion* superRegion);
      |                                     ~~~~~~~~~~~~~~~~~^~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
